Fix overlapping

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ h4 {
 	/*border: solid black;*/
 	margin: 40px;
 	text-shadow: 0px 1px 0px rgba(63,107,169, 0.5);
+	padding-bottom: 40px;
 }
 
 .content p {
@@ -110,7 +111,7 @@ h4 {
 	display: block;
 	padding: 20px 40px;
 	max-width: 300px;
-	margin: 100px auto 0;
+	margin: 80px auto 0;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
